# crudie

./: .gitignore  .gitmodules  README.md  crudie  crudie.run.deps.yml  crudie.run.services.yml  crudie.run.test.yml  crudie.setup.init.yml  dbs.yml  docker-compose-deps.yml  docker-compose.yml  nginx.conf  postgres.yml  run.sh  seed.sql  sql.md  test.py
apps/javascript-express/: package.json
apps/python-django/crudie/: settings.py  urls.py
apps/python-fastapi/: Pipfile
apps/python-flask/: Pipfile
apps/rust/: Cargo.toml
apps/typescript-express/: package.json
apps/zig/: build.zig  build.zig.zon
apps/zig/src/: main.zig
go/sql/: Dockerfile  go.mod  go.sum  main.go
rust/sql/: .env  Cargo.toml  Dockerfile
rust/sql/.sqlx/: query-1e35dce8c8d89b9c5aa35cc8fbbb447602eeea4017079b224afcc32c698af318.json  query-2b93f4be12589854b090862d2777d1a91a8758967e1927b0ee82069f3bd61504.json  query-60e09db31c5a84fe3af6e726b7577b7a5259c4202d0809ace66de4789853ee93.json  query-95ec9bca942ec3fa3c8757959d3c7b3833ae1bc7c48cef9a0006b54ce0d9fda4.json  query-ad5061197945323ca039b0101318a1d5f505f50ff7f963e718757df4113f1bdd.json  query-b770133e02fc9aba79e5f68d820c87fe7ede966a93e9c9608a712ede95b95ff6.json  query-bd41242463897b595f6709e6d1df07a704c5ed8eb772df5a3c4e7bf0e8ffc3c7.json
rust/sql/src/: main.rs
test/: Dockerfile  Pipfile  test.py  test_services.py
test/tests/: __init__.py  invalid_method.py  invalid_path.py  success.py  test_conflict_failure.py  test_invalid_data.py  test_invalid_media_type.py  test_invalid_method.py  test_invalid_path.py  test_success.py
(+27 files in other folders)
