[package]
name = "sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
serde = "1.0.197"
